--- a/confs/youtube/webapk.conf
+++ b/confs/youtube/webapk.conf
@@ -1,7 +1,7 @@
-id = youtube
-name = YouTube
-mainURL = https://m.youtube.com
-deeplink = youtube.com
+id = com.mamlu.notes
+name = https
+mainURL = https://mamlu-moon-notes.base44.app
+deeplink = base44.app
 icon = youtube.png
 scripts = *.js
 
