--- a/confs/youtube/webapk.conf
+++ b/confs/youtube/webapk.conf
@@ -2,7 +2,7 @@ id = com.mamlu.notes
 name = https
 mainURL = https://mamlu-moon-notes.base44.app
 deeplink = base44.app
-icon = icom.png
+icon = icon.png
 scripts = *.js
 
 allowSubdomains = true
