--- a/confs/youtube/webapk.conf
+++ b/confs/youtube/webapk.conf
@@ -1,7 +1,7 @@
 id = com.mamlu.notes
 name = https
 mainURL = https://mamlu-moon-notes.base44.app
-deeplink = base44.app
+deeplink =
 icon = icon.png
 scripts = *.js
 
