--- a/confs/youtube/webapk.conf
+++ b/confs/youtube/webapk.conf
@@ -1,7 +1,7 @@
 id = com.mamlu.notes
-name = https
+name = Mamlu
 mainURL = https://mamlu-moon-notes.base44.app
-deeplink =
+deeplink = https://mamlu-moon-notes.base44.app
 icon = icon.png
 scripts = *.js
 
