--- a/confs/youtube/webapk.conf
+++ b/confs/youtube/webapk.conf
@@ -2,7 +2,7 @@ id = com.mamlu.notes
 name = Mamlu
 mainURL = https://mamlu-moon-notes.base44.app
 deeplink = https://mamlu-moon-notes.base44.app
-icon = Icon.png
+icon = icon.png
 scripts = *.js
 
 allowSubdomains = true
