--- a/confs/youtube/webapk.conf
+++ b/confs/youtube/webapk.conf
@@ -1,8 +1,7 @@
-id = com.mamlu.notes
-name = Mamlu
-mainURL = https://mamlu-moon-notes.base44.app
-deeplink = https://mamlu-moon-notes.base44.app
-icon = icon.png
+id="com.mamlu.notes"
+name="Mamlu"
+mainURL="file:///android_asset/index.html"
+icon="icon.png"
 scripts = *.js
 
 allowSubdomains = true
