--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,10 @@
-name: Build APK
-on:
-  workflow_dispatch:
+- name: Prepare Offline Files
+        run: |
+          mkdir -p app/src/main/assets
+          cp index.html app/src/main/assets/
+          # If you have CSS/JS files, copy them here too: cp style.css app/src/main/assets/
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Build with Shell
+      - name: Run Build Script
         run: |
           chmod +x make.sh
           ./make.sh build confs/webapk.conf
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: Mamlu-APK
-          path: ./*.apk
